--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-
+<head>
+	<title>Hello Coursera!</title>
+</head>
+<body>
+<h1>Hello Cousera</h1>
+</body>
 </html>
