--- a/mod2-solution/index.html
+++ b/mod2-solution/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Becoming a frontend developer</title>
-<link rel="stylesheet" type="text/css" href="css/styles.css">
+<link rel="stylesheet" href="css/styles.css">
 
 </head>
 <body>
