--- a/mod2-solution/index.html
+++ b/mod2-solution/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Becoming a frontend developer</title>
 <link rel="stylesheet" href="css/styles.css">
 
